<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addTaskLayout">

    <TextView
        android:id="@+id/addTaskDateTextView"
        style="@style/FragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/tabMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/addTaskDateTextView"
        >

        <ToggleButton
            android:id="@+id/addTaskLowBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/green_button_background"
            android:textOn="@string/low"
            android:textOff="@string/low"
            />

        <ToggleButton
            android:id="@+id/addTaskMidBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/yellow_button_background"
            android:textOn="@string/mid"
            android:textOff="@string/mid"
            />

        <ToggleButton
            android:id="@+id/addTaskHighBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/red_button_background"
            android:textOn="@string/high"
            android:textOff="@string/high"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timePickerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tabMenu"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/startTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/pick_start_time"
            />

        <Button
            android:id="@+id/endTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/pick_end_time"
            />
    </LinearLayout>



    <EditText
        android:id="@+id/addTitleTextView"
        style="@style/FragmentTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/title"
        android:layout_below="@id/timePickerLL"

        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/addTitleTextView"
        android:layout_above="@id/saveBtn"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addDescTextView"
            style="@style/DescriptionTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTitleTextView" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/edit_task"
        android:layout_alignParentBottom="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_cancel"
        android:contentDescription="@string/delete_task"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        />

</RelativeLayout>